test/fail/macro-inside-macro.rnp
macro a() {
  macro b() {}
}
---
SyntaxError: Cannot declare macro inside macro
 --> fail/macro-inside-macro.rnp:2:3
  |
2 |   macro b() {}
  |   ^^^^^ Cannot declare macro inside macro
  |
